--- a/src/css/SideBar.css
+++ b/src/css/SideBar.css
@@ -47,8 +47,8 @@
     
 }
 
-/* .sidebar__chats {
+.sidebar__chats {
     flex: 1;
     background-color:whitesmoke;
     overflow: hidden;
-} */
+}
