--- a/src/css/Chat.css
+++ b/src/css/Chat.css
@@ -3,3 +3,29 @@
     flex-direction: column;
     flex: 0.65;
 }
+.chat__heading {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+}
+
+.chat__headingInfo {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.chat__headingInfo > h3 {
+    margin-bottom: 3px;
+    font-weight: 500;
+}
+
+.chat__headingInfo > p {
+    color: gray;
+}
+
+.chat__headingRight {
+    display: flex;
+    justify-content: space-between;
+    min-width: 100px;
+}
